--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
   <h1>My Tuesday Schedule</h1>
   <ol>
-    <li>Period 1 is AAAA </li>
-    <li>Period 2 is BBBB </li>
-    <li>Period 3 is CCCC </li>
-    <li>Period 4 is DDDD </li>  
-    <li>Period 5 is EEEE </li>  
-    <li>Period 6 is FFFF </li>  
-    <li>Period 7 is GGGG </li>  
-    <li>Period 8 is HHHH </li>  
-    <li>Period 9 is JJJJ </li>  
-    <li>Period 10 is KKKK </li>  
+    <li>Period 1 is ApBio </li>
+    <li>Period 2 is ApBio </li>
+    <li>Period 3 is WebDevelopment </li>
+    <li>Period 4 is ApLang </li>  
+    <li>Period 5 is USHistory </li>  
+    <li>Period 6 is Dance </li>  
+    <li>Period 7 is Dance </li>  
+    <li>Period 8 is Dance </li>  
+    <li>Period 9 is Dance </li>  
+    <li>Period 10is Dance </li>  
   </ol>
 
   
